# ipconfig

./: Cargo.toml  README.md  appveyor.yml  build.rs
src/: adapter.rs  computer.rs  error.rs  lib.rs
src/bindings/: mod.rs  win32.rs  win64.rs
tests/: test.rs
