[package]
name = "ipconfig"
version = "0.1.1"
authors = ["Liran Ringel <liranringel@gmail.com>"]
description = "Get network adapters information and network configuration for windows."
license = "MIT/Apache-2.0"
keywords = ["ipconfig", "network", "adapter", "interface", "windows"]
repository = "https://github.com/liranringel/ipconfig"
homepage = "https://github.com/liranringel/ipconfig"
documentation = "https://docs.rs/ipconfig"
readme = "README.md"

[badges]
appveyor = { repository = "liranringel/ipconfig" }

[dependencies]
winapi = "^0.2.8"
error-chain = "0.8"
widestring = "^0.2.2"
socket2 = "^0.2.2"
winreg = "^0.4.0"

[build-dependencies]
bindgen = "0.30"
