[package]
name = "ipconfig"
version = "0.1.5"  # Remember to also update the html_root_url in lib.rs and the documentation links here and in README.md
authors = ["Liran Ringel <liranringel@gmail.com>"]
description = "Get network adapters information and network configuration for windows."
license = "MIT/Apache-2.0"
keywords = ["ipconfig", "network", "adapter", "interface", "windows"]
repository = "https://github.com/liranringel/ipconfig"
homepage = "https://github.com/liranringel/ipconfig"
documentation = "https://docs.rs/ipconfig/0.1.5/x86_64-pc-windows-msvc/ipconfig/"
readme = "README.md"

[badges]
appveyor = { repository = "liranringel/ipconfig" }

[target.'cfg(windows)'.dependencies]
winapi = "^0.2.8"
error-chain = "0.8"
widestring = "^0.2.2"
socket2 = "^0.2.2"
winreg = "^0.4.0"
