[package]
name = "ipconfig"
version = "0.3.2"  # Remember to also update the html_root_url in lib.rs and the documentation links here and in README.md
authors = ["Liran Ringel <liranringel@gmail.com>"]
description = "Get network adapters information and network configuration for windows."
license = "MIT/Apache-2.0"
keywords = ["ipconfig", "network", "adapter", "interface", "windows"]
repository = "https://github.com/liranringel/ipconfig"
homepage = "https://github.com/liranringel/ipconfig"
documentation = "https://docs.rs/ipconfig/0.3.2/x86_64-pc-windows-msvc/ipconfig/"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "liranringel/ipconfig" }

[features]
default = ["computer"]
computer = ["winreg"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Registry"] }
widestring = "1.0.2"
socket2 = "0.5.1"
winreg = { version = "0.50.0", optional = true }
